--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,23 +11,19 @@ services:
       - redis
       # Enable to use RabbitMQ
       #- rabbitmq
+    env_file: env_file
     environment: &mayan_env
       # Enable to use RabbitMQ
       # MAYAN_CELERY_BROKER_URL: amqp://${MAYAN_RABBITMQ_USER:-mayan}:${MAYAN_RABBITMQ_PASSWORD:-mayanrabbitpass}@rabbitmq:5672/${MAYAN_RABBITMQ_VHOST:-mayan}
       # To use RabbitMQ as broker, disable Redis as broker
       MAYAN_CELERY_BROKER_URL: redis://:${MAYAN_REDIS_PASSWORD:-mayanredispassword}@redis:6379/0
       MAYAN_CELERY_RESULT_BACKEND: redis://:${MAYAN_REDIS_PASSWORD:-mayanredispassword}@redis:6379/1
-      MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'${MAYAN_DATABASE_DB:-mayan}','PASSWORD':'${MAYAN_DATABASE_PASSWORD:-mayandbpass}','USER':'${MAYAN_DATABASE_USER:-mayan}','HOST':'${MAYAN_DATABASE_HOST:-postgresql'}}"
-      MAYAN_DOCKER_WAIT: "postgresql:5432 redis:6379"
+      MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'${MAYAN_DATABASE_DB:-mayan}','PASSWORD':'${MAYAN_DATABASE_PASSWORD:-mayandbpass}','USER':'${MAYAN_DATABASE_USER:-mayan}','HOST':'${MAYAN_DATABASE_HOST:-postgresql}'}}"
+      MAYAN_DOCKER_WAIT: "${MAYAN_DATABASE_HOST:-postgresql}:5432" redis:5379"
       MAYAN_LOCK_MANAGER_BACKEND: mayan.apps.lock_manager.backends.redis_lock.RedisLock
       MAYAN_LOCK_MANAGER_BACKEND_ARGUMENTS: "{'redis_url':'redis://:${MAYAN_REDIS_PASSWORD:-mayanredispassword}@redis:6379/2'}"
       # Replace with the line below when using RabbitMQ
       # MAYAN_DOCKER_WAIT: "postgresql:5432 redis:6379 rabbitmq:5672"
-      # To add operating system packages, like additional OCR language,
-      # packages, put then in the variable below.
-      # MAYAN_APT_INSTALLS: "tesseract-ocr-deu tesseract-ocr-nld"
-      # To add Python libraries, like LDAP, put then in the variable below.
-      # MAYAN_PIP_INSTALLS: "python-ldap"
     image: mayanedms/mayanedms:${MAYAN_DOCKER_IMAGE_TAG:-s4.0}
     networks:
       - bridge
@@ -112,23 +108,24 @@ services:
   #      - ${MAYAN_RABBITMQ_VOLUME:-rabbitmq}:/var/lib/rabbitmq
 
   # Enable to run standalone workers
-  # worker_fast:
-  #   command:
-  #     - run_worker
-  #     - fast
-  #   depends_on:
-  #     - postgresql
-  #     - redis
-  #     # Enable to use RabbitMQ
-  #     # - rabbitmq
-  #   environment:
-  #     <<: *mayan_env
-  #   image: mayanedms/mayanedms:${MAYAN_DOCKER_IMAGE_TAG:-s4.0}
-  #   networks:
-  #     - bridge
-  #   restart: unless-stopped
-  #   volumes:
-  #     - ${MAYAN_APP_VOLUME:-app}:/var/lib/mayan
+  #worker_fast:
+  #  command:
+  #    - run_worker
+  #    - fast
+  #  depends_on:
+  #    #- postgresql
+  #    - redis
+  #    # Enable to use RabbitMQ
+  #    # - rabbitmq
+  #  env_file: env_file
+  #  environment:
+  #    <<: *mayan_env
+  #  image: mayanedms/mayanedms:${MAYAN_DOCKER_IMAGE_TAG:-s4.0}
+  #  networks:
+  #    - bridge
+  #  restart: unless-stopped
+  #  volumes:
+  #    - ${MAYAN_APP_VOLUME:-app}:/var/lib/mayan
 
   # Enable to run frontend gunicorn
   # frontend:
@@ -139,6 +136,7 @@ services:
   #     - redis
   #     # Enable to use RabbitMQ
   #     # - rabbitmq
+  #   env_file: env_file
   #   environment:
   #     <<: *mayan_env
   #   image: mayanedms/mayanedms:${MAYAN_DOCKER_IMAGE_TAG:-s4.0}
