--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,8 +17,8 @@ services:
       # To use RabbitMQ as broker, disable Redis as broker
       MAYAN_CELERY_BROKER_URL: redis://:${MAYAN_REDIS_PASSWORD:-mayanredispassword}@redis:6379/0
       MAYAN_CELERY_RESULT_BACKEND: redis://:${MAYAN_REDIS_PASSWORD:-mayanredispassword}@redis:6379/1
-      MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'${MAYAN_DATABASE_DB:-mayan}','PASSWORD':'${MAYAN_DATABASE_PASSWORD:-mayandbpass}','USER':'${MAYAN_DATABASE_USER:-mayan}','HOST':'postgresql'}}"
-      MAYAN_DOCKER_WAIT: "postgresql:5432 redis:6379"
+      MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'${MAYAN_DATABASE_DB:-mayan}','PASSWORD':'${MAYAN_DATABASE_PASSWORD:-mayandbpass}','USER':'${MAYAN_DATABASE_USER:-mayan}','HOST':'${MAYAN_DATABASE_HOST:-postgresql}'}}"
+      MAYAN_DOCKER_WAIT: "${MAYAN_DATABASE_HOST:-postgresql}:5432 redis:6379"
       # Replace with the line below when using RabbitMQ
       # MAYAN_DOCKER_WAIT: "postgresql:5432 redis:6379 rabbitmq:5672"
       # To add operating system packages, like additional OCR language,
@@ -26,7 +26,7 @@ services:
       # MAYAN_APT_INSTALLS: "tesseract-ocr-deu tesseract-ocr-nld"
       # To add Python libraries, like LDAP, put then in the variable below.
       # MAYAN_PIP_INSTALLS: "python-ldap"
-    image: mayanedms/mayanedms:3
+    image: mayanedms/mayanedms:${MAYAN_DOCKER_IMAGE_TAG:-3}
     networks:
       - bridge
     ports:
@@ -43,7 +43,7 @@ services:
       POSTGRES_DB: ${MAYAN_DATABASE_DB:-mayan}
       POSTGRES_PASSWORD: ${MAYAN_DATABASE_PASSWORD:-mayandbpass}
       POSTGRES_USER: ${MAYAN_DATABASE_USER:-mayan}
-    image: postgres:9.6-alpine
+    image: postgres:${MAYAN_DOCKER_POSTGRES_TAG:-9.6-alpine}
     networks:
       - bridge
     restart: unless-stopped
@@ -69,7 +69,7 @@ services:
       - "256"
       - --requirepass
       - "${MAYAN_REDIS_PASSWORD:-mayanredispassword}"
-    image: redis:5.0-alpine
+    image: redis:${MAYAN_DOCKER_REDIS_TAG:-5.0-alpine}
     networks:
       - bridge
     restart: unless-stopped
@@ -89,7 +89,7 @@ services:
   #     # - rabbitmq
   #   environment:
   #     <<: *mayan_env
-  #   image: mayanedms/mayanedms:3
+  #   image: mayanedms/mayanedms:${MAYAN_DOCKER_IMAGE_TAG:-3}
   #   networks:
   #     - bridge
   #   ports:
@@ -121,7 +121,7 @@ services:
   #     # - rabbitmq
   #   environment:
   #     <<: *mayan_env
-  #   image: mayanedms/mayanedms:3
+  #  image: mayanedms/mayanedms:${MAYAN_DOCKER_IMAGE_TAG:-3}
   #   networks:
   #     - bridge
   #   restart: unless-stopped
@@ -139,7 +139,7 @@ services:
   #     # - rabbitmq
   #   environment:
   #     <<: *mayan_env
-  #   image: mayanedms/mayanedms:3
+  #   image: mayanedms/mayanedms:${MAYAN_DOCKER_IMAGE_TAG:-3}
   #   networks:
   #     - bridge
   #   ports:
