Add the `fuse` package to the Docker image
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -37,6 +37,7 @@ apt-get update \
     fonts-arphic-uming \
     fonts-arphic-ukai \
     fonts-unfonts-core \
+    fuse \
     ghostscript \
     git-core \
     gpgv \
