--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,8 @@
-# Use this file to pass variables to the Docker Compose.
+# Use this file to pass variables to Docker Compose to change how the
+# docker-compose.yml file is interpreted.
+
 # To pass values as environment variables to the running containers use
 # the env_file instead.
-# MAYAN_VIEWS_PAGINATE_BY: 20
 
+# MAYAN_DOCKER_IMAGE_NAME=mayanedms/mayanedms
+# MAYAN_DOCKER_IMAGE_TAG=s4.0
